[metadata]
name = taskwebapp
version = 0.0.1
url = https://github.com/mschlege1838/taskwebapp
author = Marty Schlegel
author_email = martin.schlegel.1838@outlook.com
license = MIT AND BSD-3-Clause
license_files = LICENSE
description = Task management webapp.
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
  jinja2
python_requires = >=3.6
include_package_data = True